[package]
name = "dnp3rs"
version = "0.1.0"
authors = ["Adam Crain <jadamcrain@automatak.com>"]
edition = "2018"

[dependencies]
log = "0.4"
tokio = { version = "^0.2.11", features = ["tcp", "sync", "io-util", "time", "rt-core", "rt-threaded", "macros"]}

[dev-dependencies]
assert_matches = "1.2"
simple_logger = "1.3"
tokio-test = "0.2"