[workspace]
resolver = "2"

members = [
    "dnp3",
    "ffi/dnp3-schema",
    "ffi/dnp3-ffi",
    "ffi/dnp3-bindings",
    "ffi/dnp3-ffi-java",
]

[workspace.dependencies]
sfio-tokio-ffi = "0.9.0"
sfio-tracing-ffi = "0.9.0"
oo-bindgen = "0.8.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = "1"

[workspace.package]
rust-version = "1.75"
edition = "2021"
license-file = "LICENSE.txt"
homepage = "https://stepfunc.io/products/libraries/dnp3/"
repository = "https://github.com/stepfunc/dnp3"
keywords = ["dnp3", "ics", "scada", "security"]
categories = ["network-programming"]

[workspace.lints.rust]
unsafe_code = "forbid"
non_ascii_idents = "deny"
unreachable_pub = "deny"
trivial_casts = "deny"
missing_docs = "deny"
unused = { level = "deny", priority = -1 }
missing_copy_implementations = "deny"