[package]
name = "dnp3"
version = "1.5.0-rc1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"
license-file = "../LICENSE.txt"
description = "Rust implementation of DNP3 (IEEE 1815) with idiomatic bindings for C, C++, .NET, and Java"
homepage = "https://stepfunc.io/products/libraries/dnp3/"
repository = "https://github.com/stepfunc/dnp3"
keywords = ["dnp3", "ics", "scada", "security", "modbus"]
categories = ["network-programming"]
readme = "README.md"
exclude = ["codegen"] # the scala code used to generate parts of the crate

[dependencies]
tracing = "0.1"
chrono = "0.4"
tokio = { version = "1", features = ["net", "sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
scursor = "0.1.0"

# TLS dependencies
sfio-rustls-config = { version = "0.1.1", optional = true }
tokio-rustls = { version = "0.24", features = ["dangerous_configuration", "tls12"], default-features = false, optional = true }

# serial dependencies
tokio-serial = { version = "=5.4.3", default-features = false, optional = true }

# serde support
serde =  { version = "^1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
assert_matches = "1.2"
clap = { version = "4.0", features = ["derive"] }
futures = { version = "0.3.24" }
rand = "0.8"
serde_json = "1.0.96"
sfio-tokio-mock-io = "0.2.0"
tokio = { version = "1", features = ["test-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1.1" }
tracing-subscriber = "0.3"



[features]
default = ["tls", "serial"]
ffi = [] # this feature flag is only used when building the FFI
tls = ["sfio-rustls-config", "tokio-rustls"]
serial = ["tokio-serial"]
# Public configuration types dervie both serde::Deserialize and serde::Serialize
serialization = ["serde"]
