
[package]
name = "dnp3"
version = "1.6.0"

authors = ["Step Function I/O LLC <info@stepfunc.io>"]
description = "Rust implementation of DNP3 (IEEE 1815) with idiomatic bindings for C, C++, .NET, and Java"
readme = "README.md"
exclude = ["codegen"] # the scala code used to generate parts of the crate

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true }
chrono = "0.4"
tokio = { workspace = true, features = ["net", "sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
scursor = "0.2.0"

# TLS dependencies
sfio-rustls-config = { version = "0.4.0", optional = true }
tokio-rustls = { version = "0.26.0", features = ["tls12"], default-features = false, optional = true }

# serial dependencies
tokio-serial = { version = "=5.4.3", default-features = false, optional = true }

# serde support
serde =  { version = "^1.0", features = ["derive"], default-features = false, optional = true }

[dev-dependencies]
assert_matches = "1.2"
serde_json = "1.0.96"
sfio-tokio-mock-io = "0.2.0"
tokio = { version = "1", features = ["test-util"] }

[features]
default = ["tls-ring", "serial"]
tls = [] # not enabled directly
ffi = [] # this feature flag is only used when building the FFI
tls-ring = ["tls", "sfio-rustls-config/crypto-ring", "tokio-rustls"]
tls-aws-lc = ["tls", "sfio-rustls-config/crypto-aws-lc", "tokio-rustls"]
serial = ["tokio-serial"]
# Public configuration types dervie both serde::Deserialize and serde::Serialize
serialization = ["serde"]
