[package]
name = "example-master-tcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
description = "DNP3 Master TCP Server example application"
license-file = "../../LICENSE.txt"

[dependencies]
dnp3 = { path = "../../dnp3", features = ["tls-ring", "serial"] }
tokio = { version = "1", features = ["net", "sync", "io-util", "io-std", "time", "rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.0", features = ["derive"] }