[package]
name = "dnp3-bindings"
version = "1.1.0-alpha1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
ci-script = { git = "https://github.com/stepfunc/oo_bindgen.git", tag = "0.3.0" }
dnp3-schema = { path = "../dnp3-schema" }
dnp3-ffi = { path = "../dnp3-ffi" }
