[package]
name = "dnp3-bindings"
version = "1.3.0-rc1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", branch = "feature/drop-safe-futures" }
dnp3-schema = { path = "../dnp3-schema" }
tracing-subscriber = "0.3"
tracing = "0.1"
