[package]
name = "dnp3-ffi-java"
version = "1.1.0"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
dnp3-ffi = { path = "../dnp3-ffi", default-features = false }

[features]
default = ["tls", "serial"]
tls = ["dnp3-ffi/tls"]
serial = ["dnp3-ffi/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = "0.6"
