[package]
name = "dnp3-ffi-java"
version = "1.7.0-M1"
build = "build.rs"

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.19"
dnp3-ffi = { path = "../dnp3-ffi", default-features = false }

[features]
default = ["tls", "serial"]
enable-tls = []
tls = ["enable-tls", "dnp3-ffi/tls"]
tls-aws-lc = ["enable-tls", "dnp3-ffi/tls-aws-lc"]
serial = ["dnp3-ffi/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = { workspace = true }
