[package]
name = "dnp3-ffi"
version = "1.3.0-rc1"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.2"
dnp3 = { path = "../../dnp3", default-features = false, features = ["ffi"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
num_cpus = "1"

[features]
default = ["tls", "serial"]
tls = ["dnp3/tls"]
serial = ["dnp3/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", branch = "feature/drop-safe-futures" }
sfio-tracing-ffi = { git = "https://github.com/stepfunc/tracing-ffi.git", branch = "feature/bindgen-0.7" }
sfio-tokio-ffi = { git = "https://github.com/stepfunc/tokio-ffi.git", branch = "feature/bindgen-0.7" }