[package]
name = "dnp3-ffi"
version = "1.5.1-rc2"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.2"
dnp3 = { path = "../../dnp3", default-features = false, features = ["ffi"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
num_cpus = "1"
sfio-promise = "0.2"

[features]
default = ["tls", "serial"]
tls = ["dnp3/tls"]
serial = ["dnp3/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = "0.8"
sfio-tracing-ffi = "0.8"
sfio-tokio-ffi = "0.8"