[package]
name = "dnp3-ffi"
version = "1.6.0"

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
lazy_static = "1.0"
tracing = { workspace = true }
tracing-core = "0.1"
tracing-subscriber = { workspace = true , features = ["chrono", "json"] }
dnp3 = { path = "../../dnp3", default-features = false, features = ["ffi"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
num_cpus = "1"
sfio-promise = "0.2"

[features]
default = ["tls", "serial"]
tls = ["dnp3/tls"]
serial = ["dnp3/serial"]

[build-dependencies]
dnp3-schema = { path = "../dnp3-schema" }
oo-bindgen = { workspace = true }
sfio-tracing-ffi = {  workspace = true  }
sfio-tokio-ffi = {  workspace = true  }