[package]
name = "dnp3-schema"
# this version is what gets applied to the FFI libraries
version = "1.1.0"
authors = ["Step Function I/O LLC <info@stepfunc.io>"]
edition = "2021"

[dependencies]
oo-bindgen = { git = "https://github.com/stepfunc/oo_bindgen.git", tag = "0.3.0" }
tracing-ffi-schema = { git = "https://github.com/stepfunc/tracing-ffi.git", tag = "0.1.0" }
tokio-ffi-schema = { git = "https://github.com/stepfunc/tokio-ffi.git", tag = "0.1.0" }
