[package]
name = "dnp3-schema"
# this version is what gets applied to the FFI libraries
version = "1.7.0-RC1"

# inherit from workspace
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
oo-bindgen = { workspace = true }
sfio-tracing-ffi = { workspace = true }
sfio-tokio-ffi = { workspace = true }
